[gd_scene load_steps=2 format=3 uid="uid://cx6r7q5x8g2u1"]

[ext_resource type="Script" uid="uid://cu217gaoxga8o" path="res://scripts/ui/pool_card_ui.gd" id="1_script"]

[node name="PoolCard" type="PanelContainer"]
custom_minimum_size = Vector2(200, 150)
offset_right = 200.0
offset_bottom = 150.0
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "奖池名称"
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "消耗: 5 金币"
horizontal_alignment = 1

[node name="AffixLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "词缀: 无"
horizontal_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DrawButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "抽奖"

[connection signal="pressed" method="_on_draw_button_pressed" from="VBoxContainer/DrawButton" to="." commit=""]



